activity_k8s/act_wordpress_pvc_secret_namespace/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: namespace-project
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:6.2.1-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
#        volumeMounts:
#        - mounthPath: /var/www/html
#          name: wordpress-volume

#      volumes:
#        - name: wordpress-volume
#          persistentVolumeClaim:
#            claimName: mypvc2
---

apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: namespace-project
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer


---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: namespace-project
spec:
  rules:
  - host: "wordpress.project"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
